Updating FileStreamer API to use FormattedDisks.